# transfer

./: .bash_profile  .bashrc  .gitconfig  .gitignore  Brewfile  Cargo.toml  README.md  bash-setup.sh  cleanup.sh  font-setup.sh  git-setup.sh  install-setup.sh  readme.md  settings.json  setup.sh  vscode-setup.sh  wake.sh
config/: Brewfile  config.toml
config/dotfiles/bat/: config
config/dotfiles/fish/: pg_run.fish
config/dotfiles/rg/: ripgreprc
config/dotfiles/vim/: init.vim  init_exp.vim
config/scripts/: macos.sh  setup.fish
dotfiles/: .bash_profile  .bashrc  .gitconfig  .ripgreprc  .vimrc  base-init.vim  coc.vim  init.vim  init_exp.vim  wake-init.vim
fishfiles/: bu.fish  fdiff.fish  fish_prompt.fish  pg_run.fish  pg_stop.fish
helpers/: all_sudo.sh  brew.sh  fish.sh  fonts.sh  git.sh  intro.sh  macos.sh  nvim.sh  util.sh  vim.sh  vscode.sh
others/: OneSnazzy.itermcolors
setup-scripts/: bash-setup.sh  fish-setup.sh  font-setup.sh  git-setup.sh  python-setup.sh  vim-setup.sh  vscode-setup.sh
transfer/: Cargo.toml
transfer-config/: Cargo.toml  config_test.toml
transfer-config/src/: brew.rs  copy.rs  download.rs  lib.rs  remind.rs  run.rs
transfer-lib/: Cargo.toml  config_test.toml
transfer-lib/src/: brew.rs  config.rs  copy.rs  download.rs  lib.rs  remind.rs  run.rs
transfer/src/: cli.rs  dir.rs  main.rs  xcode.rs
transfer/src/config/: brew.rs  copy.rs  download.rs  mod.rs  remind.rs  run.rs
vscode/: react-native.code-snippets  settings.json  vscode-setup.sh
