[workspace]
members = ["transfer", "transfer-lib"]

[workspace.package]
authors = ["Nico Dinata <nicodnt@icloud.com>"]
description = "command line tool to automate setting up my macOS dev environment"
edition = "2021"
keywords = ["cli", "macos", "dotfiles", "brewfile"]
readme = "readme.md"
repository = "https://github.com/nictar/transfer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
