[package]
name = "transfer-lib"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
