[package]
name = "transfer-lib"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
curl = "0.4"
futures-util = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
xshell = "0.2"
