[package]
name = "transfer-lib"
description = "helper library functions for the transfer program"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
curl = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
toml = "0.7"
xshell = "0.2"
