[package]
name = "transfer"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
transfer-config = { path = "../transfer-config" }
transfer-lib = { path = "../transfer-lib" }
