[package]
name = "transfer"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
indicatif = "0.17"
transfer-config = { path = "../transfer-config" }
