[package]
name = "transfer"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
curl = "0.4"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
simple-home-dir = { version = "0.1", features = ["expand_tilde"] }
toml = "0.7"
